change animation to avoid flickering of post title on webkit base browsers change code highlight theme

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,5 +1,3 @@
-@import url("solarized-dark.css");
-
 body {
   padding:50px;
   font:20px/2 "adelle", monospace;
@@ -228,6 +226,10 @@ footer a:hover {
   color: #dc322f;
 }
 
+.post {
+  position: relative;
+}
+
 .post-title {
   font-family: "adelle", monospace;
   font-size: 2em;
@@ -240,6 +242,14 @@ footer a:hover {
   -ms-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
+  transition-property: padding, width;
+}
+
+.post-title.jedi {
+  padding-left: 0px;
+  padding-right: 40px;
+  margin-left: 0px;
+  left: 0;
 }
 
 .post-title.jedi::before {
@@ -253,28 +263,29 @@ footer a:hover {
   background-position: 0px 5px;
   opacity: 0;
   -webkit-transition: all 1s cubic-bezier(0.075, 0.820, 0.165, 1.000);
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
   -moz-transition: all 1s cubic-bezier(0.075, 0.820, 0.165, 1.000);
   -ms-transition: all 1s cubic-bezier(0.075, 0.820, 0.165, 1.000);
   -o-transition: all 1s cubic-bezier(0.075, 0.820, 0.165, 1.000);
   transition: all 1s cubic-bezier(0.075, 0.820, 0.165, 1.000);
+
+
+  transition-property: opacity, margin, padding, left;
 }
 
 .post-title.jedi:hover {
   border-color: #dc322f;
 
   -webkit-transition: all 0.3s ease-out;
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
   -moz-transition: all 0.3s ease-out;
   -ms-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 
-  margin-left: -40px;
   padding-left: 40px;
+  padding-right: 0;
+
   background-position: 0px 5px;
+  transition-property: padding, width;
 }
 
 .post-title.jedi:hover::before {
@@ -282,21 +293,17 @@ footer a:hover {
   background-position: 0px 5px;
   opacity: 1;
   -webkit-transition: all 0.3s ease-in-out;
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-
+  transition-property: opacity, margin, padding, left;
 }
 
 .post-title a {
   color:#002b36;
 
   -webkit-transition: color 1s ease-in-out;
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
   -moz-transition: color 1s ease-in-out;
   -ms-transition: color 1s ease-in-out;
   -o-transition: color 1s ease-in-out;
@@ -307,8 +314,6 @@ footer a:hover {
   color: #dc322f;
 
   -webkit-transition: color 0.3s ease-in-out;
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
   -moz-transition: color 0.3s ease-in-out;
   -ms-transition: color 0.3s ease-in-out;
   -o-transition: color 0.3s ease-in-out;
@@ -372,7 +377,7 @@ footer a:hover {
 
 article .highlight {
   font: 0.8em "droid-sans-mono", monospace;
-  border-radius: 0.4em;
+  /*border-radius: 0.4em;*/
   color: white;
   background: #1d232a;
   margin-top: -0.8em;
@@ -382,7 +387,7 @@ article .highlight {
 
 .highlight pre {
   counter-reset: line-numbering;
-  padding-right: 0.5em;
+  /*padding-right: 0.5em;*/
 }
 
 .highlight a, .highlight a:hover {
@@ -415,36 +420,42 @@ article .highlight {
 
 .highlight pre a:first-of-type::before {
   padding-top: 10px;
-  border-top-left-radius: 0.4em;
+  /*border-top-left-radius: 0.4em;*/
 
   /*box-shadow: rgba(255, 255, 255, 0.9) 0px 1px 1px inset;*/
 }
 
 .highlight pre a:last-of-type::before {
   padding-bottom: 10px;
-  border-bottom-left-radius: 0.4em;
+  /*border-bottom-left-radius: 0.4em;*/
 }
 
 .highlight pre a:only-of-type::before {
     padding: 10px;
 }
 
-.inline-code {
+code {
   background: #eee8d5;
   font-size: .8em;
   line-height: 1.5em;
   color: #555;
   border: 1px solid #ddd;
+/*
   -webkit-border-radius: 0.4em;
   -moz-border-radius: 0.4em;
   -ms-border-radius: 0.4em;
   -o-border-radius: 0.4em;
   border-radius: 0.4em;
+*/
   padding: 0 .3em;
   margin: -1px 0;
 }
 
-blockquote .inline-code {
+.highlight code {
+  font-size: 1em;
+}
+
+blockquote code {
   font-size: 0.9em;
   color: inherit;
   background: none;
